// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel basic 1`] = `
.c5 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c5 *[stroke*="#"],
.c5 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*="#"],
.c5 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c10 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #7D4CDB;
  stroke: #7D4CDB;
}

.c10 g {
  fill: inherit;
  stroke: inherit;
}

.c10 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c10 *[stroke*="#"],
.c10 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c10 *[fill-rule],
.c10 *[FILL-RULE],
.c10 *[fill*="#"],
.c10 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
  padding-top: 6px;
  padding-bottom: 6px;
}

.c11 {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  width: 6px;
}

.c1 {
  position: relative;
}

.c12 {
  position: relative;
  width: 100%;
  height: 100%;
  float: left;
  margin-right: -100%;
  display: block;
  -webkit-animation: none;
  animation: none;
}

.c13 {
  position: relative;
  width: 100%;
  height: 100%;
  float: left;
  margin-right: -100%;
  display: none;
  -webkit-animation: none;
  animation: none;
}

.c3 {
  position: absolute;
  z-index: 1;
  left: 0;
  -webkit-align-items: center'; justify-content: center;-webkit-box-align:center';
  justify-content: center;
  -ms-flex-align: center'; justify-content: center;align-items:center';
  justify-content: center;
}

.c6 {
  position: absolute;
  z-index: 1;
  right: 0;
  -webkit-align-items: center'; justify-content: center;-webkit-box-align:center';
  justify-content: center;
  -ms-flex-align: center'; justify-content: center;align-items:center';
  justify-content: center;
}

.c8 {
  position: absolute;
  z-index: 1;
  bottom: 0;
  -webkit-align-items: center'; justify-content: center;-webkit-box-align:center';
  justify-content: center;
  -ms-flex-align: center'; justify-content: center;align-items:center';
  justify-content: center;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  height: 100%;
  line-height: 0;
}

.c4:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c4:focus > circle,
.c4:focus > ellipse,
.c4:focus > line,
.c4:focus > path,
.c4:focus > polygon,
.c4:focus > polyline,
.c4:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c4:focus::-moz-focus-inner {
  border: 0;
}

.c4:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c4:focus:not(:focus-visible) > circle,
.c4:focus:not(:focus-visible) > ellipse,
.c4:focus:not(:focus-visible) > line,
.c4:focus:not(:focus-visible) > path,
.c4:focus:not(:focus-visible) > polygon,
.c4:focus:not(:focus-visible) > polyline,
.c4:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c4:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

.c9 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  line-height: 0;
}

.c9:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c9:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c9:focus > circle,
.c9:focus > ellipse,
.c9:focus > line,
.c9:focus > path,
.c9:focus > polygon,
.c9:focus > polyline,
.c9:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c9:focus::-moz-focus-inner {
  border: 0;
}

.c9:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible) > circle,
.c9:focus:not(:focus-visible) > ellipse,
.c9:focus:not(:focus-visible) > line,
.c9:focus:not(:focus-visible) > path,
.c9:focus:not(:focus-visible) > polygon,
.c9:focus:not(:focus-visible) > polyline,
.c9:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c9:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

@media only screen and (max-width:768px) {
  .c7 {
    padding-top: 3px;
    padding-bottom: 3px;
  }
}

@media only screen and (max-width:768px) {
  .c11 {
    width: 3px;
  }
}

<div
  class="c0 c1"
>
  <div
    style="position: relative; overflow: hidden; width: 100%; height: 100%;"
  >
    <div
      class="c2 c3"
      offset="left"
    >
      <button
        class="c4"
        type="button"
      >
        <svg
          aria-label="Previous"
          class="c5"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 2 7 12l10 10"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <div
      class="c2 c6"
      offset="right"
    >
      <button
        class="c4"
        type="button"
      >
        <svg
          aria-label="Next"
          class="c5"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 2 10 10L7 22"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <div
      class="c7 c8"
      offset="bottom"
    >
      <button
        class="c9"
        type="button"
      >
        <svg
          aria-label="Subtract"
          class="c10"
          viewBox="0 0 24 24"
        >
          <path
            d="M2 12h20"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
      <div
        class="c11"
      />
      <button
        class="c9"
        type="button"
      >
        <svg
          aria-label="Subtract"
          class="c5"
          viewBox="0 0 24 24"
        >
          <path
            d="M2 12h20"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <div
      class="c12"
    >
      <div>
        Slide One
      </div>
    </div>
    <div
      class="c13"
    >
      <div>
        Slide Two
      </div>
    </div>
  </div>
</div>
`;

exports[`Carousel controlled component 1`] = `
.c5 {
  display: inline-block;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c5 g {
  fill: inherit;
  stroke: inherit;
}

.c5 *:not([stroke])[fill="none"] {
  stroke-width: 0;
}

.c5 *[stroke*="#"],
.c5 *[STROKE*="#"] {
  stroke: inherit;
  fill: none;
}

.c5 *[fill-rule],
.c5 *[FILL-RULE],
.c5 *[fill*="#"],
.c5 *[FILL*="#"] {
  fill: inherit;
  stroke: none;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c1 {
  position: relative;
}

.c7 {
  position: relative;
  width: 100%;
  height: 100%;
  float: left;
  margin-right: -100%;
  display: block;
  -webkit-animation: iqtfUG 0.6s ease-in-out;
  animation: iqtfUG 0.6s ease-in-out;
}

.c8 {
  position: relative;
  width: 100%;
  height: 100%;
  float: left;
  margin-right: -100%;
  display: block;
  -webkit-animation: fDGZkn 0.6s ease-in-out;
  animation: fDGZkn 0.6s ease-in-out;
}

.c3 {
  position: absolute;
  z-index: 1;
  left: 0;
  -webkit-align-items: center'; justify-content: center;-webkit-box-align:center';
  justify-content: center;
  -ms-flex-align: center'; justify-content: center;align-items:center';
  justify-content: center;
}

.c6 {
  position: absolute;
  z-index: 1;
  right: 0;
  -webkit-align-items: center'; justify-content: center;-webkit-box-align:center';
  justify-content: center;
  -ms-flex-align: center'; justify-content: center;align-items:center';
  justify-content: center;
}

.c4 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  color: inherit;
  outline: none;
  border: none;
  padding: 0;
  text-align: inherit;
  height: 100%;
  line-height: 0;
}

.c4:hover {
  background-color: rgba(221,221,221,0.4);
  color: #000000;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c4:focus > circle,
.c4:focus > ellipse,
.c4:focus > line,
.c4:focus > path,
.c4:focus > polygon,
.c4:focus > polyline,
.c4:focus > rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c4:focus::-moz-focus-inner {
  border: 0;
}

.c4:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c4:focus:not(:focus-visible) > circle,
.c4:focus:not(:focus-visible) > ellipse,
.c4:focus:not(:focus-visible) > line,
.c4:focus:not(:focus-visible) > path,
.c4:focus:not(:focus-visible) > polygon,
.c4:focus:not(:focus-visible) > polyline,
.c4:focus:not(:focus-visible) > rect {
  outline: none;
  box-shadow: none;
}

.c4:focus:not(:focus-visible)::-moz-focus-inner {
  border: 0;
}

<div
  class="c0 c1"
>
  <div
    style="position: relative; overflow: hidden; width: 100%; height: 100%;"
  >
    <div
      class="c2 c3"
      offset="left"
    >
      <button
        class="c4"
        type="button"
      >
        <svg
          aria-label="Previous"
          class="c5"
          viewBox="0 0 24 24"
        >
          <path
            d="M17 2 7 12l10 10"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <div
      class="c2 c6"
      offset="right"
    >
      <button
        class="c4"
        type="button"
      >
        <svg
          aria-label="Next"
          class="c5"
          viewBox="0 0 24 24"
        >
          <path
            d="m7 2 10 10L7 22"
            fill="none"
            stroke="#000"
            stroke-width="2"
          />
        </svg>
      </button>
    </div>
    <div
      class="c7"
    >
      <div>
        Slide One
      </div>
    </div>
    <div
      class="c8"
    >
      <div>
        Slide Two
      </div>
    </div>
  </div>
</div>
`;
